# food-preparation-time-prediction-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  project_notebook.ipynb  pyproject.toml
EDA/: README.md  project_notebook.ipynb
EDA/.ipynb_checkpoints/: project_notebook-checkpoint.ipynb
deployment/: README.md  predict.py  test.py  train.py
model/: model.pkl
modeling/: README.md  model_notebook.ipynb
utils/: build_pipeline.py  data_split.py  load_data.py  preprocess.py  save_load_model.py
