[project]
name = "food-prepartion-time-ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "awsebcli>=3.25.3",
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.4.0",
    "requests>=2.32.5",
]
